projet_gl/src/test/deca/syntax/invalid/ifThenElse/incorrectIf.deca
// Description:
//    invalid test parser for if.
//
// Resultats:
//    ligne 11: no viable alternative at input '{'.
//
// Historique:
//    cree le 12/01/2024

{
    if(true{
        "ok";
    }
}